# nebula

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  docker-compose.yml
crates/nebula-bff/: Cargo.toml  Dockerfile
crates/nebula-bff/src/: args.rs  auth.rs  auth_handlers.rs  handlers.rs  handlers_v2.rs  main.rs  state.rs
crates/nebula-cli/: Cargo.toml
crates/nebula-cli/src/: args.rs  chat.rs  client.rs  config.rs  main.rs  output.rs
crates/nebula-common/: Cargo.toml
crates/nebula-common/src/: auth.rs  cluster.rs  endpoint.rs  engine_image.rs  execution_context.rs  lib.rs  model_cache.rs  model_deployment.rs  model_request.rs  model_spec.rs  model_template.rs  node_status.rs  placement.rs  telemetry.rs
crates/nebula-gateway/: Cargo.toml  Dockerfile
crates/nebula-gateway/src/: args.rs  audit.rs  auth.rs  engine.rs  handlers.rs  main.rs  metrics.rs  responses.rs  state.rs  util.rs
crates/nebula-meta/: Cargo.toml
crates/nebula-meta/src/: etcd.rs  lib.rs  memory.rs  types.rs
crates/nebula-node/: Cargo.toml
crates/nebula-node/src/: args.rs  docker_api.rs  engine.rs  gpu.rs  heartbeat.rs  image_manager.rs  main.rs  model_cache_manager.rs  reconcile.rs  scrape.rs  util.rs
crates/nebula-node/src/engine/: mod.rs  sglang.rs  virtual.rs  vllm.rs
crates/nebula-node/tests/: test_virtual.rs
crates/nebula-observe/: Cargo.toml
crates/nebula-observe/src/: main.rs
crates/nebula-router/: Cargo.toml  Dockerfile
crates/nebula-router/src/: args.rs  handlers.rs  lib.rs  main.rs  metrics.rs  state.rs  strategy.rs  sync.rs
crates/nebula-scheduler/: Cargo.toml  Dockerfile
crates/nebula-scheduler/src/: args.rs  lib.rs  main.rs  metrics.rs  planner.rs  reconcile.rs  util.rs
crates/nebula-scheduler/src/reconcile_test/: mod.rs
deploy/: nebula.env.example
docs/: README.md  arch_optimization.md  architecture.md  deployment.md  development_plan.md  frontend_design_spec.md  gemini_memory.md  i18n_checklist.md  llm_service_mesh.md  observability_contract.md  optimization_plan.md  release_notes_v1.1.0.md  setup.md  task.md  testing.md  unigateway_integration.md  walkthrough.md  xtrace_requirements.md
docs/bff/: bff_api_contract.md  bff_architecture.md  bff_capability_alignment.md
docs/brain/: deployment_2x5090.md  implementation_plan.md  optimization_roadmap.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  project_overview.md  roadmap.md  task.md
docs/details/: stats.md
docs/gateway/: README.md  gateway_observability.md  gateway_optimization_plan.md  gateway_p0_execution.md  panel_api_contract.md
docs/ha/: README.md  ha_roadmap.md
docs/memory/: engine_image_management.md  frontend_deployment.md  multi_engine_support.md  observability.md  remote_login_deploy_test.md  xtrace_deployment.md  xtrace_signal_contract_template.md
docs/model_management/: model_management_implementation_summary.md  model_management_page_design.md  model_management_redesign.md
frontend/: index.html  package-lock.json  package.json  run_frontend.sh  tailwind.config.ts  vite.config.ts
frontend/sample/src/: index.css
frontend/sample/src/components/: ActiveEndpoints.tsx  BalanceCard.tsx  ClusterSummary.tsx  EarningReport.tsx  EndpointTable.tsx  GpuOverview.tsx  GpuUsageChart.tsx  Sidebar.tsx  StatsCard.tsx  TransactionTable.tsx
frontend/sample/src/pages/: Index.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/: GlobalErrorBoundary.tsx  LoadModelDialog.tsx  Sidebar.tsx  StatsCard.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  separator.tsx  table.tsx  tabs.tsx
frontend/src/components/views/: account-settings.tsx  audit.tsx  dashboard.tsx  endpoints.tsx  gateway.tsx  images.tsx  inference.tsx  login.tsx  model-catalog.tsx  model-detail.tsx  model-library.tsx  models.tsx  nodes.tsx  settings.tsx  templates.tsx  user-profile.tsx
frontend/src/hooks/: useAuditLogs.ts  useCacheSummary.ts  useClusterOverview.ts  useEngineStats.ts  useGatewayStats.ts  useImages.ts  useMetricsRaw.ts  useModels.ts  useTemplates.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts  i18n.tsx  types.ts
frontend/src/routes/: index.tsx
frontend/src/store/: useAuthStore.ts  useLoadModelStore.ts
scripts/: debug_router.rs  start_debug_local.sh  test_node.sh  test_node_auth.sh  test_placement.json  test_router.sh  test_ug.rs
