[workspace]
resolver = "2"
members = [
  "crates/nebula-common",
  "crates/nebula-meta",
  "crates/nebula-bff",
  "crates/nebula-router",
  "crates/nebula-scheduler",
  "crates/nebula-gateway",
  "crates/nebula-node",
  "crates/nebula-cli",
  "crates/nebula-observe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-core = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
xtrace-client = "0.0.7"
xtrace = "0.0.7"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.28"
