[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
nebula-common = { path = "../nebula-common" }
tokio = { workspace = true }
