[package]
name = "nebula-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util = "0.3"
http.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

chrono.workspace = true

nebula-common = { path = "../nebula-common" }
nebula-meta = { path = "../nebula-meta" }
