[package]
name = "nebula-observe"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nebula-observe"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xtrace.workspace = true
