[package]
name = "nebula-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util = "0.3"

chrono.workspace = true
xtrace-client.workspace = true

nebula-common = { path = "../nebula-common" }
nebula-meta = { path = "../nebula-meta" }
